--- a/app/src/main/res/drawable/border_background_2.xml
+++ b/app/src/main/res/drawable/border_background_2.xml
@@ -3,7 +3,7 @@
     <!-- Background shape -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#D3D3D3" />
+            <solid android:color="#E8E8E8" />
         </shape>
     </item>
     <!-- Border -->
@@ -11,7 +11,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="2dp"
-            android:color="@android:color/white" />
+                android:color="@android:color/white" />
 
         </shape>
     </item>
