--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -31,7 +31,7 @@ android:background="@color/white">
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginTop="270dp"
-            android:layout_marginBottom="380dp"
+            android:layout_marginBottom="500dp"
             android:indeterminateTint="@color/custom_progress_color"
             app:layout_constraintTop_toTopOf="@id/details_toolbar" />
 
@@ -39,7 +39,7 @@ android:background="@color/white">
         android:id="@+id/content_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
         android:visibility="gone">
 
 
