--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -9,78 +12,76 @@
 
 
     <TextView
-        android:id="@+id/balanceText"
+        android:id="@+id/dateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Current Date!"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.008" />
+        app:layout_constraintBottom_toTopOf="@+id/headerText"
+        />
 
-    <TextView
-        android:id="@+id/search_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="172dp"
-        android:layout_marginBottom="170dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/balanceText"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/headerText"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="48dp"
+        android:layout_height="30dp"
         android:background="@android:color/darker_gray"
-        android:padding="16dp"
+        android:padding="5dp"
         android:text="Portfolio"
         android:textColor="@android:color/black"
-        android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateText"
+
+        />
+
+
+    <include
+        android:id="@+id/balance_section"
+        layout="@layout/balance_info_section"
+        app:layout_constraintBottom_toTopOf="@+id/portfolioRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerText" />
 
     <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/portfolioRecyclerView"
-        android:layout_width="403dp"
-        android:layout_height="401dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/headerText2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.285" />
-
+        app:layout_constraintTop_toBottomOf="@+id/balance_section"
+        />
 
     <TextView
         android:id="@+id/headerText2"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="416dp"
+        android:layout_height="30dp"
         android:background="@android:color/darker_gray"
-        android:padding="16dp"
+        android:padding="5dp"
         android:text="Favorites"
         android:textColor="@android:color/black"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/favoritesRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.392" />
+        app:layout_constraintTop_toBottomOf="@+id/portfolioRecyclerView"
+        app:layout_constraintVertical_bias="1.0"/>
 
     <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/favoritesRecyclerView"
-        android:layout_width="402dp"
-        android:layout_height="157dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/headerText2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
