--- a/app/src/main/res/layout/balance_info_section.xml
+++ b/app/src/main/res/layout/balance_info_section.xml
@@ -4,34 +4,35 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="0dp">
+    android:padding="0dp"
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="110dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/stockTickerText_fav"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ticker"
-                android:textColor="@android:color/black"
+                android:text="Net Worth"
+                android:textColor="#9E9E9E"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/companyNameText_fav"
+                android:id="@+id/networthText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="companyName"
+                android:text="networth_text"
                 android:textColor="#9E9E9E"
                 android:textSize="14sp"
                 android:textStyle="bold" />
@@ -44,28 +45,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginStart="155dp"
-           >
+            android:layout_marginLeft="135dp"
+            android:layout_marginRight="5dp">
 
             <TextView
-                android:id="@+id/currentPriceText_fav"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:text="curPrice"
+                android:text="Cash Balance"
                 android:textAlignment="viewEnd"
-                android:textColor="@android:color/black"
+                android:textColor="#9E9E9E"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_marginRight="5dp"/>
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/changeText_fav"
+                android:id="@+id/balanceText"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="change"
                 android:textAlignment="viewEnd"
-                android:textColor="#454343"
+                android:textColor="#9E9E9E"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
@@ -73,16 +72,6 @@
 
 
 
-        <ImageButton
-            android:id="@+id/favButton"
-            android:src="@drawable/right_arrow"
-            android:background="@android:color/transparent"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center_vertical"
-            android:onClick="onFavoriteItemClick"
-
-            />
 
 
     </LinearLayout>
