--- a/app/src/main/res/layout/balance_info_section.xml
+++ b/app/src/main/res/layout/balance_info_section.xml
@@ -31,41 +31,50 @@
                 android:id="@+id/networthText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:text="networth_text"
                 android:textColor="#9E9E9E"
-                android:textSize="14sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
 
+        <!--        used as a spacer-->
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginLeft="135dp"
-            android:layout_marginRight="5dp">
+           android:layout_marginRight="15dp"
+           >
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
+
                 android:text="Cash Balance"
-                android:textAlignment="viewEnd"
+                android:textAlignment="textEnd"
                 android:textColor="#9E9E9E"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/balanceText"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="change"
-                android:textAlignment="viewEnd"
+                android:layout_gravity="end"
+                android:layout_marginTop="5dp"
+
+                android:text="cash_balance"
+                android:textAlignment="textEnd"
                 android:textColor="#9E9E9E"
-                android:textSize="14sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -79,7 +88,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="2dp"
         android:background="#9E9E9E" />
 
 
