--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,13 @@
         android:id="@+id/dateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="Current Date!" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="5dp"
+        android:text="Current Date!"
+        android:textColor="#9E9E9E"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/headerText"
@@ -20,9 +25,10 @@
         android:layout_height="30dp"
         android:background="@android:color/darker_gray"
         android:padding="5dp"
-        android:text="Portfolio"
+        android:text="  PORTFOLIO"
         android:textColor="@android:color/black"
-        android:textSize="16sp" />
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     <include
         android:id="@+id/balance_section"
@@ -41,13 +47,25 @@
         android:layout_height="30dp"
         android:background="@android:color/darker_gray"
         android:padding="5dp"
-        android:text="Favorites"
+        android:text="   FAVORITES"
         android:textColor="@android:color/black"
-        android:textSize="16sp" />
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favoritesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/finhubFooter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Powered by Finhub"
+        android:textAlignment="center"
+        android:textColor="#9E9E9E"
+        android:textStyle="bold|italic" />
+
 
 </LinearLayout>
