--- a/app/src/main/res/layout/news_row.xml
+++ b/app/src/main/res/layout/news_row.xml
@@ -75,6 +75,8 @@
                     android:text="TextView"
                     android:textColor="#000000"
                     android:textStyle="bold"
+                    android:maxLines="3"
+                    android:ellipsize="end"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/news_source"
