--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/my_details_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    android:layout_marginTop="40dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
     android:background="@color/white"
     android:elevation="4dp">
 
@@ -11,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/star_border"
+        android:layout_marginRight="20dp"
         android:contentDescription="unselected star"
         android:background="@android:color/transparent"
         android:layout_gravity="end" />
