--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,238 +1,277 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-
-<androidx.core.widget.NestedScrollView
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_weight="1"
-android:fillViewport="true"
-android:background="@color/white">
-    <LinearLayout
-        android:layout_height="match_parent"
+    <View
+        android:id="@+id/white_layout"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/main"
-        tools:context=".DetailsActivity"
+        android:layout_height="40dp"
         android:background="@color/white"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="2dp"/>
+
+    <include
+        android:id="@+id/details_toolbar"
+        layout="@layout/custom_toolbar" />
 
 
-        <include
-            android:id="@+id/details_toolbar"
-            layout="@layout/custom_toolbar" />
-
-        <ProgressBar
-            android:id="@+id/details_progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginTop="270dp"
-            android:layout_marginBottom="600dp"
-            android:indeterminateTint="@color/custom_progress_color"
-            app:layout_constraintTop_toTopOf="@id/details_toolbar" />
-
-    <LinearLayout
-        android:id="@+id/content_layout"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@color/white"
+        android:fillViewport="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical"
+            tools:context=".DetailsActivity">
 
 
-        <TableLayout
-            android:id="@+id/tableLayout"
-            android:layout_width="409dp"
-            android:layout_height="92dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/white">
+            <ProgressBar
+                android:id="@+id/details_progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginTop="270dp"
+                android:layout_marginBottom="600dp"
+                android:indeterminateTint="@color/custom_progress_color"
+                app:layout_constraintTop_toTopOf="@id/details_toolbar" />
 
-            <TableRow
+            <LinearLayout
+                android:id="@+id/content_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginTop="85dp"
+                android:visibility="gone"
+                >
 
-                <TextView
-                    android:id="@+id/company_ticker"
-                    android:layout_width="163dp"
+
+                <TableLayout
+                    android:id="@+id/tableLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginLeft="60dp">
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                       >
+
+                        <TextView
+                            android:id="@+id/company_ticker"
+                            android:layout_width="163dp"
+                            android:layout_height="wrap_content"
+                            android:text="TextView"
+                            android:textColor="#000000"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/current_price"
+                            android:layout_width="114dp"
+                            android:layout_height="wrap_content"
+                            android:text="TextView"
+                            android:textAlignment="textEnd"
+                            android:textColor="#000000"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+
+                        <TextView
+                            android:id="@+id/company_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="TextView"
+                            android:textStyle="bold" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_gravity="end"
+                            >
+                            <ImageView
+                                android:id="@+id/company_change_image"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/trending_up" />
+
+                            <TextView
+                                android:id="@+id/change"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="end"
+                                android:layout_marginLeft="5dp"
+                                android:text="TextView"
+                                android:textAlignment="viewEnd"
+                                android:textColor="#000000"
+                                android:textStyle="bold"
+                                />
+
+                        </LinearLayout>
+
+
+                    </TableRow>
+
+                </TableLayout>
+
+
+                <!--   my spwipable tabls     -->
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/viewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="373dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="20dp"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:background="@color/white"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    app:tabGravity="fill"
+                    app:tabIndicatorColor="#3F51B5"
+                    app:tabMaxWidth="0dp"
+                    app:tabMode="fixed" />
+
 
                 <TextView
-                    android:id="@+id/current_price"
-                    android:layout_width="114dp"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/company_name"
+                    android:id="@+id/Portfolio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/white"
+                    android:text="Portfolio"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+
+
+                <include layout="@layout/details_portfolio_section" />
+
 
                 <TextView
-                    android:id="@+id/change"
+                    android:id="@+id/Stats"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
-            </TableRow>
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/white"
+                    android:text="Stats"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-        </TableLayout>
+                <include layout="@layout/stats_section" />
 
+                <TextView
+                    android:id="@+id/About"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/white"
+                    android:text="About"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-        <!--   my spwipable tabls     -->
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="373dp"
-            android:layout_weight="1"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                <include layout="@layout/about_section" />
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabMaxWidth="0dp"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="#3F51B5"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:tabMode="fixed"
-            android:background="@color/white"/>
+                <TextView
+                    android:id="@+id/Insights"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/white"
+                    android:text="Insights"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
+                <include layout="@layout/insights_section" />
 
-        <TextView
-            android:id="@+id/Portfolio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/white"
-            android:text="Portfolio"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+                <include
+                    android:id="@+id/include"
+                    layout="@layout/recommendations_chart"
+                    android:layout_width="400dp"
+                    android:layout_height="403dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/white"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/include_2" />
 
+                <include
+                    android:id="@+id/include_2"
+                    layout="@layout/earnings_chart"
+                    android:layout_width="400dp"
+                    android:layout_height="403dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/white"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/include" />
 
-        <include
-            layout="@layout/details_portfolio_section"
-            />
-
-
-        <TextView
-            android:id="@+id/Stats"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/white"
-            android:text="Stats"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-             />
-
-        <include
-            layout="@layout/stats_section"
-            />
-
-        <TextView
-            android:id="@+id/About"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/white"
-            android:text="About"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            />
-
-        <include
-            layout="@layout/about_section"
-            />
-
-        <TextView
-            android:id="@+id/Insights"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/white"
-            android:text="Insights"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            />
-
-        <include
-            layout="@layout/insights_section"/>
-
-        <include
-            android:id="@+id/include"
-            layout="@layout/recommendations_chart"
-            android:layout_width="400dp"
-            android:layout_height="403dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include_2"
-            android:background="@color/white"
-            />
-
-        <include
-            android:id="@+id/include_2"
-            layout="@layout/earnings_chart"
-            android:layout_width="400dp"
-            android:layout_height="403dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include"
-            android:background="@color/white"
-            />
-
-        <TextView
-            android:id="@+id/news_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/white"
-            android:text="News"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/include_2"
-            />
+                <TextView
+                    android:id="@+id/news_header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/white"
+                    android:text="News"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@+id/include_2" />
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/news_RecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:nestedScrollingEnabled="false"
-            />
-    </LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/news_RecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:nestedScrollingEnabled="false" />
+            </LinearLayout>
 
 
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
