--- a/app/src/main/res/layout/about_section.xml
+++ b/app/src/main/res/layout/about_section.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/TextAppearanceTheme">
 
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:textColor="#000000">
 
         <TableRow
             android:layout_width="wrap_content"
@@ -92,7 +94,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:scrollHorizontally="true"
-            android:text=" " />
+             />
 
     </HorizontalScrollView>
 
