--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="5dp"
         android:text="Current Date!"
-        android:textColor="#9E9E9E"
+        android:textColor="#707070"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -23,7 +23,7 @@
         android:id="@+id/headerText"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:background="@android:color/darker_gray"
+        android:background="@color/myGray"
         android:padding="5dp"
         android:text="  PORTFOLIO"
         android:textColor="@android:color/black"
@@ -46,7 +46,7 @@
         android:id="@+id/headerText2"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:background="@android:color/darker_gray"
+        android:background="@color/myGray"
         android:padding="5dp"
         android:text="   FAVORITES"
         android:textColor="@android:color/black"
