--- a/app/src/main/res/layout/balance_info_section.xml
+++ b/app/src/main/res/layout/balance_info_section.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Net Worth"
-                android:textColor="#9E9E9E"
+                android:textColor="#707070"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="networth_text"
-                android:textColor="#9E9E9E"
+                android:textColor="#707070"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -60,7 +60,7 @@
 
                 android:text="Cash Balance"
                 android:textAlignment="textEnd"
-                android:textColor="#9E9E9E"
+                android:textColor="#707070"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -73,7 +73,7 @@
 
                 android:text="cash_balance"
                 android:textAlignment="textEnd"
-                android:textColor="#9E9E9E"
+                android:textColor="#707070"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
