--- a/app/src/main/res/layout/insights_section.xml
+++ b/app/src/main/res/layout/insights_section.xml
@@ -11,14 +11,16 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal">
+
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Social Sentiments"
+            android:textColor="#000000"
 
-            />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
