--- a/app/src/main/res/layout/stats_section.xml
+++ b/app/src/main/res/layout/stats_section.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:theme="@style/TextAppearanceTheme">
 
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:textColor="#000000">
 
         <TableRow
             android:layout_width="match_parent"
